添加了买/卖家登录注册页面，使用到的图片、js文件，修改了css文件

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -256,7 +256,7 @@ body{
 #singup,
 #login{
     position: absolute;
-    display: none;
+/*     display: none; */
 }
 
 #toggle-checkbox:checked ~ div{
